crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@180.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '1' @? '$ ? ($ > 0)';"
---
SelectStmt@0..34
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..33
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..33
      TypeCast@13..16
        AConst@13..16
          Sconst@13..16 "'1'"
      Whitespace@16..17 " "
      Op@17..19 "@?"
      Whitespace@19..20 " "
      AConst@20..33
        Sconst@20..33 "'$ ? ($ > 0)'"
  Ascii59@33..34 ";"

