crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@182.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[1,2,0,3]', '$[*] ? ((2 / @ > 0) is unknown)');"
---
SelectStmt@0..72
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..70
    FuncCall@7..70
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..35
        Sconst@24..35 "'[1,2,0,3]'"
      Ascii44@35..36 ","
      Whitespace@36..37 " "
      AConst@37..70
        Sconst@37..70 "'$[*] ? ((2 / @ > 0)  ..."
  Ascii41@70..71 ")"
  Ascii59@71..72 ";"

