crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@183.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('0', '1 / $');"
---
SelectStmt@0..38
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..36
    FuncCall@7..36
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..27
        Sconst@24..27 "'0'"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      AConst@29..36
        Sconst@29..36 "'1 / $'"
  Ascii41@36..37 ")"
  Ascii59@37..38 ";"

