crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@184.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('0', '1 / $ + 2');"
---
SelectStmt@0..42
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..40
    FuncCall@7..40
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..27
        Sconst@24..27 "'0'"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      AConst@29..40
        Sconst@29..40 "'1 / $ + 2'"
  Ascii41@40..41 ")"
  Ascii59@41..42 ";"

