crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@185.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('0', '-(3 + 1 % $)');"
---
SelectStmt@0..45
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..43
    FuncCall@7..43
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..27
        Sconst@24..27 "'0'"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      AConst@29..43
        Sconst@29..43 "'-(3 + 1 % $)'"
  Ascii41@43..44 ")"
  Ascii59@44..45 ";"

