crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@186.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('1', '$ + \"2\"');"
---
SelectStmt@0..40
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..38
    FuncCall@7..38
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..27
        Sconst@24..27 "'1'"
      Ascii44@27..28 ","
      Whitespace@28..29 " "
      AConst@29..38
        Sconst@29..38 "'$ + \"2\"'"
  Ascii41@38..39 ")"
  Ascii59@39..40 ";"

