crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@187.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('[1, 2]', '3 * $');"
---
SelectStmt@0..43
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..41
    FuncCall@7..41
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..32
        Sconst@24..32 "'[1, 2]'"
      Ascii44@32..33 ","
      Whitespace@33..34 " "
      AConst@34..41
        Sconst@34..41 "'3 * $'"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

