crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@188.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb_path_query('\"a\"', '-$');"
---
SelectStmt@0..37
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..35
    FuncCall@7..35
      Ident@7..23 "jsonb_path_query"
      Ascii40@23..24 "("
      AConst@24..29
        Sconst@24..29 "'\"a\"'"
      Ascii44@29..30 ","
      Whitespace@30..31 " "
      AConst@31..35
        Sconst@31..35 "'-$'"
  Ascii41@35..36 ")"
  Ascii59@36..37 ";"

